# saft-website

./: .gitignore  README.md  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: nuxt.config.js  package-lock.json  package.json
app/layouts/: default.vue
app/pages/: index.vue
assets/css/: main.scss
client/: nuxt.config.js  package-lock.json  package.json
client/layouts/: default.vue
client/pages/: index.vue
client/pages/about/: index.vue
components/: Icon.vue
layouts/: default.vue
pages/: index.vue
pages/about/: index.vue
pages/podcast/: index.vue
server/: Cargo.toml
server/migrations/2020-10-10-110029_create_posts/: up.sql
server/migrations/2020-10-10-110033_create_users/: up.sql
server/src/: data.rs  db.rs  endpoints.rs  graphql.rs  lib.rs  main.rs  models.rs  schema.graphql  schema.rs
static/: browserconfig.xml
store/: index.js
