[package]
name = "server"
version = "0.1.0"
authors = ["stevenjohn <stevenjpx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-cors = "0.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
r2d2 = "0.8.9"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
actix-rt = "1.1.1"
chrono = {version = "0.4.19", features = ["serde"] }
uuid = "0.8.1"
async-graphql = "2.0.0"
async-graphql-actix-web = "2.0.0"
html-validation = "0.1.2"
rust-crypto = "0.2.36"
